#145 Fixing span start/end with applied spans.