@@ -90,7 +90,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final BinaryDocumentFilterResponse response = service.filter(Arrays.asList("pdf"), "context", "documentid", document, MimeType.APPLICATION_PDF, MimeType.APPLICATION_PDF);
+        final BinaryDocumentFilterResponse response = service.filter(List.of("pdf"), "context", "documentid", document, MimeType.APPLICATION_PDF, MimeType.APPLICATION_PDF);
 
         // Write the byte array to a file.
         final File outputFile = File.createTempFile("redact", ".pdf");
@@ -122,7 +122,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -146,7 +146,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "My email is test@something.com and cc is 4121742025464465", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "My email is test@something.com and cc is 4121742025464465", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -170,7 +170,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "test@something.com is email and cc is 4121742025464465", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "test@something.com is email and cc is 4121742025464465", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -194,7 +194,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "test@something.com", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "test@something.com", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -218,7 +218,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "90210", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "90210", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -242,7 +242,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "his name was JEFF.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "his name was JEFF.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -266,7 +266,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "he was seen on 10-19-2020.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "he was seen on 10-19-2020.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -290,7 +290,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid",
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid",
                 "George Washington was president." + System.lineSeparator() + "Abraham Lincoln was president.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
@@ -315,7 +315,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210. The name 456 should be filtered. Jeff Smith should be ignored.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210. The name 456 should be filtered. Jeff Smith should be ignored.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -341,7 +341,7 @@ public class EndToEndTests {
         final String input = IOUtils.toString(this.getClass().getResourceAsStream("/inputs/1.txt"), Charset.defaultCharset());
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -370,7 +370,7 @@ public class EndToEndTests {
         final String input = "IN THE UNITED STATES DISTRICT COURT \nEASTERN DISTRICT OF ARKANSAS \nWESTERN DIVISION \nJAMES EDWARD SMITH, \nafk/a James Edward Bridges, \nADC#103093 \nv. No. 4:14-cv-455-DPM \nPLAINTIFF \nCHARLES A. SMITH; \nMARY ANN CONLEY, \nafk/a Mary Ann Smith; and \nROBERT CASTILLOW DEFENDANTS \nORDER \nJames Smith's prose complaint must be dismissed without prejudice. \nHe hasn't paid the filing fee, moved to proceed in forma pauperis, or provided \nproof of service on any defendant. FED. R. CIV. P. 4(I); Local Rule 5.5(c)(2). \nSo Ordered. \nD.P. Marshall Jr. \nUnited States District Judge \nCase 4:14-cv-00455-DPM   Document 2   Filed 12/09/14   Page 1 of 1\n";
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -396,7 +396,7 @@ public class EndToEndTests {
         final String input = IOUtils.toString(this.getClass().getResourceAsStream("/inputs/Oxford_City_unveil_merger_to_expand_their_youth_system.json.txt"), Charset.defaultCharset());
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -427,7 +427,7 @@ public class EndToEndTests {
         final String input = IOUtils.toString(this.getClass().getResourceAsStream("/inputs/Kinross_reports_strong_2020_secondquarter_results.json.txt"), Charset.defaultCharset());
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -456,7 +456,7 @@ public class EndToEndTests {
         final String input = IOUtils.toString(this.getClass().getResourceAsStream("/inputs/Donations_to_Black_Lives_Matter_Group_Dont_Go_to_DNC.json.txt"), Charset.defaultCharset());
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -485,7 +485,7 @@ public class EndToEndTests {
         final String input = IOUtils.toString(this.getClass().getResourceAsStream("/inputs/Fantasy_Baseball_Winners__Losers_Sixto_Sanchez_and_Jeff_McNeil_stay_hot.json.txt"), Charset.defaultCharset());
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -516,7 +516,7 @@ public class EndToEndTests {
         final String input = "the id is 123456.";
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -547,7 +547,7 @@ public class EndToEndTests {
         final String input = "he lived at 100 main street";
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("streetaddress"), "context", "documentid", input, MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("streetaddress"), "context", "documentid", input, MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -654,13 +654,13 @@ public class EndToEndTests {
     public void endToEndUsingCustomDictionary() throws Exception {
 
         final CustomDictionary customDictionary = new CustomDictionary();
-        customDictionary.setCustomDictionaryFilterStrategies(Arrays.asList(new CustomDictionaryFilterStrategy()));
-        customDictionary.setTerms(Arrays.asList("george", "samuel"));
+        customDictionary.setCustomDictionaryFilterStrategies(List.of(new CustomDictionaryFilterStrategy()));
+        customDictionary.setTerms(List.of("george", "samuel"));
         customDictionary.setFuzzy(false);
 
         final Policy policy = new Policy();
         policy.setName("custom-dictionary");
-        policy.getIdentifiers().setCustomDictionaries(Arrays.asList(customDictionary));
+        policy.getIdentifiers().setCustomDictionaries(List.of(customDictionary));
 
         final Path temp = Files.createTempDirectory("philter");
         final File file = Paths.get(temp.toFile().getAbsolutePath(), "default.json").toFile();
@@ -674,7 +674,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "his name was samuel and george.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "his name was samuel and george.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -694,16 +694,16 @@ public class EndToEndTests {
         LOGGER.info("Terms file written to {}", termsFile.getAbsolutePath());
 
         final CustomDictionary customDictionary = new CustomDictionary();
-        customDictionary.setFiles(Arrays.asList(termsFile.getAbsolutePath()));
-        customDictionary.setCustomDictionaryFilterStrategies(Arrays.asList(new CustomDictionaryFilterStrategy()));
+        customDictionary.setFiles(List.of(termsFile.getAbsolutePath()));
+        customDictionary.setCustomDictionaryFilterStrategies(List.of(new CustomDictionaryFilterStrategy()));
         customDictionary.setClassification("names");
-        customDictionary.setTerms(Arrays.asList("george"));
+        customDictionary.setTerms(List.of("george"));
         customDictionary.setFuzzy(false);
         customDictionary.setSensitivity("low");
 
         final Policy policy = new Policy();
         policy.setName("custom-dictionary");
-        policy.getIdentifiers().setCustomDictionaries(Arrays.asList(customDictionary));
+        policy.getIdentifiers().setCustomDictionaries(List.of(customDictionary));
 
         final File file = Paths.get(temp.toFile().getAbsolutePath(), "default.json").toFile();
         FileUtils.writeStringToFile(file, gson.toJson(policy), Charset.defaultCharset());
@@ -716,7 +716,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "his name was samuel and george.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "his name was samuel and george.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -736,14 +736,14 @@ public class EndToEndTests {
         LOGGER.info("Terms file written to {}", termsFile.getAbsolutePath());
 
         final CustomDictionary customDictionary = new CustomDictionary();
-        customDictionary.setFiles(Arrays.asList(termsFile.getAbsolutePath()));
-        customDictionary.setCustomDictionaryFilterStrategies(Arrays.asList(new CustomDictionaryFilterStrategy()));
+        customDictionary.setFiles(List.of(termsFile.getAbsolutePath()));
+        customDictionary.setCustomDictionaryFilterStrategies(List.of(new CustomDictionaryFilterStrategy()));
         customDictionary.setClassification("names");
         customDictionary.setFuzzy(false);
 
         final Policy policy = new Policy();
         policy.setName("custom-dictionary-bloom");
-        policy.getIdentifiers().setCustomDictionaries(Arrays.asList(customDictionary));
+        policy.getIdentifiers().setCustomDictionaries(List.of(customDictionary));
 
         final File file = Paths.get(temp.toFile().getAbsolutePath(), "default.json").toFile();
         FileUtils.writeStringToFile(file, gson.toJson(policy), Charset.defaultCharset());
@@ -756,7 +756,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "his name was samuel.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "his name was samuel.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -780,7 +780,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", null, "his name was JEFF.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", null, "his name was JEFF.", MimeType.TEXT_PLAIN);
 
         LOGGER.info("Generated document ID: " + response.documentId());
         LOGGER.info(response.filteredText());
@@ -810,7 +810,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("justcreditcard"), "context", "documentid", "My email is test@something.com", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("justcreditcard"), "context", "documentid", "My email is test@something.com", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -834,7 +834,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("justcreditcard"), "context", "documentid", "My cc is 4121742025464465", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("justcreditcard"), "context", "documentid", "My cc is 4121742025464465", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -882,7 +882,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("justcreditcard"), "context", "documentid", "My cc is 4121742025464400", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("justcreditcard"), "context", "documentid", "My cc is 4121742025464400", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -905,7 +905,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -913,6 +913,29 @@ public class EndToEndTests {
 
     }
 
+    @Test
+    public void endToEndWithSSNAndZipCode() throws Exception {
+
+        final Path temp = Files.createTempDirectory("philter");
+        final File file = Paths.get(temp.toFile().getAbsolutePath(), "default.json").toFile();
+        LOGGER.info("Writing policy to {}", file.getAbsolutePath());
+        FileUtils.writeStringToFile(file, gson.toJson(getPolicySSNAndZipCode("default")), Charset.defaultCharset());
+
+        Properties properties = new Properties();
+        properties.setProperty("indexes.directory", INDEXES_DIRECTORY);
+        properties.setProperty("filter.policies.directory", temp.toFile().getAbsolutePath());
+
+        final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
+
+        final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210.", MimeType.TEXT_PLAIN);
+
+        LOGGER.info(response.filteredText());
+
+        Assertions.assertEquals("George Washington was president and his ssn was {{{REDACTED-ssn}}} and he lived at {{{REDACTED-zip-code}}}.", response.filteredText());
+
+    }
+    
     @Test
     public void endToEndWithFilterIgnoredTermsFromFile() throws Exception {
 
@@ -928,7 +951,7 @@ public class EndToEndTests {
         final PhileasConfiguration phileasConfiguration = new PhileasConfiguration(properties);
 
         final PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-        final FilterResponse response = service.filter(Arrays.asList("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210.", MimeType.TEXT_PLAIN);
+        final FilterResponse response = service.filter(List.of("default"), "context", "documentid", "George Washington was president and his ssn was 123-45-6789 and he lived at 90210.", MimeType.TEXT_PLAIN);
 
         LOGGER.info(response.filteredText());
 
@@ -954,7 +977,7 @@ public class EndToEndTests {
         Assertions.assertThrows(FileNotFoundException.class, () -> {
 
             PhileasFilterService service = new PhileasFilterService(phileasConfiguration);
-            final FilterResponse response = service.filter(Arrays.asList("custom1"), "context", "documentid", "My email is test@something.com", MimeType.TEXT_PLAIN);
+            final FilterResponse response = service.filter(List.of("custom1"), "context", "documentid", "My email is test@something.com", MimeType.TEXT_PLAIN);
 
         });
 
